--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -149,7 +149,7 @@ section.user_info {
 }
 
 .gravatar {
-  float: left;
+  /*float: left;*/
   margin-right: 10px;
   max-width: 50px;
   border-radius: 50%;
@@ -168,4 +168,30 @@ input {
 
 .panel {
   margin-top: 50px;
+}
+
+/* Users edit */
+.gravatar_edit {
+  margin: 15px auto;
+  text-align: center;
+  .gravatar {
+    float: none;
+    max-width: 100px;
+  }
+}
+/* User index*/
+.users{
+  list-style: none;
+  margin:0;
+  padding-left:0;
+  li {
+    overflow:auto;
+    padding:10px 0;
+    border-bottom:1px solid #D5D5D5;
+  }
+}
+.delete-btn {
+  float: right;
+  position: relative;
+  right:0;
 }
